--- a/app/globals.css
+++ b/app/globals.css
@@ -25,3 +25,14 @@ body {
   color: var(--foreground);
   background: var(--background);
 }
+
+/* Hide number input arrows */
+input[type="number"]::-webkit-outer-spin-button,
+input[type="number"]::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
